--- a/Team Project 1 - v4.ipynb
+++ b/Team Project 1 - v4.ipynb
@@ -8,7 +8,19 @@
      "id": "4449d42c-21d5-49b9-af27-184a3e3bf1f4"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Keys'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-a9204b623dc4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;31m# import APIs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mKeys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNYTAPI\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnyt_api\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mKeys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mNewsAPI\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnews_api\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mKeys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAlphaAPI\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0malpha_api\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Keys'"
+     ]
+    }
+   ],
    "source": [
     "# dependencies\n",
     "import os\n",
@@ -767,9 +779,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:PyData]",
+   "display_name": "Python (dae)",
    "language": "python",
-   "name": "conda-env-PyData-py"
+   "name": "dae"
   },
   "language_info": {
    "codemirror_mode": {
@@ -781,7 +793,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
