--- a/Team Project 1 - v5.ipynb
+++ b/Team Project 1 - v5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
     "nbpresent": {
      "id": "4449d42c-21d5-49b9-af27-184a3e3bf1f4"
@@ -24,14 +24,14 @@
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
     "\n",
     "# import APIs\n",
-    "from Keys.NYTAPI import nyt_api\n",
-    "from Keys.NewsAPI import news_api\n",
-    "from Keys.AlphaAPI import alpha_api"
+    "from keys.NYTAPI import nyt_api\n",
+    "from keys.NewsAPI import news_api\n",
+    "from keys.AlphaAPI import alpha_api"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {
     "nbpresent": {
      "id": "7452ebac-f331-4b77-8a11-23dc7e42bcc7"
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "nbpresent": {
      "id": "e93d91a1-0791-4abd-8694-7f8a82299e74"
@@ -168,19 +168,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 91/91 [00:00<00:00, 125842.95it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "stock_df, stock_dates_output = get_stock_data(Stock_Quote, stock_dates)"
    ]
@@ -194,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,27 +225,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2018, 6, 1, 0, 0)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "getDataTimeFromISO(stock_dates_output[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {
     "nbpresent": {
      "id": "21b7e7c7-8f47-4fd9-9464-255b117d5ac2"
@@ -281,21 +262,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "nbpresent": {
      "id": "8784529d-2093-44d4-9bbc-b586f78d754a"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20180531 20180830\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "begin_date = bd[:4] + bd[5:7] + bd[8:10]\n",
     "end_date = ed[:4] + ed[5:7] + ed[8:10]\n",
@@ -304,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,22 +292,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "nbpresent": {
      "id": "fe19293b-bfca-42bf-a283-f6de4bc87c22"
     },
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 500/500 [01:55<00:00,  4.32it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# prepare variables\n",
     "# make sure we can loop through all the articles we get\n",
@@ -381,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,36 +417,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 20/20 [00:10<00:00,  1.86it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "wsj_description, wsj_pub_date = newsAPI(\"WSJ\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 20/20 [00:10<00:00,  1.90it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cnn_description, cnn_pub_date = newsAPI(\"CNN\")"
    ]
@@ -502,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "nbpresent": {
      "id": "87a00b1b-c509-42e1-8f9a-3c52243fd515"
@@ -566,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -657,45 +606,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/apple/Documents/anaconda3/envs/PyData/lib/python3.6/site-packages/ipykernel/__main__.py:1: FutureWarning: 'Date' is both an index level and a column label.\n",
-      "Defaulting to column, but this will raise an ambiguity error in a future version\n",
-      "  if __name__ == '__main__':\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nyt_wsj_df = nyt_df.merge(wsj_df, how=\"inner\", on=\"Date\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/apple/Documents/anaconda3/envs/PyData/lib/python3.6/site-packages/ipykernel/__main__.py:1: FutureWarning: 'Date' is both an index level and a column label.\n",
-      "Defaulting to column, but this will raise an ambiguity error in a future version\n",
-      "  if __name__ == '__main__':\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nyt_wsj_cnn_df = nyt_wsj_df.merge(cnn_df, how=\"inner\", on=\"Date\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,9 +650,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:PyData]",
+   "display_name": "Python (dae)",
    "language": "python",
-   "name": "conda-env-PyData-py"
+   "name": "dae"
   },
   "language_info": {
    "codemirror_mode": {
@@ -735,7 +664,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
